fixed scroll, overflow

--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -44,8 +44,8 @@ body {
 
   --space: 3.5rem;
   --space-text: 1.25rem;
-  --content-width: 820px;
-  --page-width: 1660px;
+  --content-width: auto;
+  --page-width: 1920px;
   --radius: 4px;
 
   --width-sidebar-left: 250px;
